--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     
     <section>
-        <img class="neon" src="c:\Users\HP\Downloads\Love the skin you're in..png">
+        <img class="neon" src="https://ibb.co/9y8gdLT">
 
     </section>
 
