--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     
     <section>
-        <img class="neon" src="https://ibb.co/9y8gdLT">
+        <img class="neon" src="ejkern/pink.jpeg" alt = "myimg">
 
     </section>
 
