--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   
    
     <section class="sec2">
-        <img class="https://ibb.co/fQGz0NJ">
+        <img class=https://www.w3schools.com/images/w3schools_green.jpg">
     </section>
 
     <section>
