--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
   
    
     <section class="sec2">
-        <img class=https://www.w3schools.com/images/w3schools_green.jpg">
+         <img class="neon2" src="
+![Love the skin you're in  (3)](https://github.com/chhaviel/kioovv/assets/173661113/a0597c61-6316-411b-9fa4-6e8381563605)">
     </section>
 
     <section>
