--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
            <div id="div"> 
             <a href="new2.html"><img class="class" src="https://images.pexels.com/photos/3762454/pexels-photo-3762454.jpeg?auto=compress&cs=tinysrgb&w=400" width="200px"></a>
             <a href="new3.html"><img class="class" src="https://images.pexels.com/photos/3762871/pexels-photo-3762871.jpeg?auto=compress&cs=tinysrgb&w=400" width="200px"></a>
-            <a href="jn.html"><img class="class" src="https://www.pexels.com/photo/person-holding-serum-bottle-3762882/" width="200px"></a>
+            <a href="jn.html"><img class="class" src="https://images.pexels.com/photos/3762879/pexels-photo-3762879.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" width="200px"></a>
             <a href="new4.html"><img class="class" src="https://images.pexels.com/photos/2122276/pexels-photo-2122276.jpeg?auto=compress&cs=tinysrgb&w=400&lazy=load" width="200px"></a>
             
         </div>
