--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 
     <section class="heade">
 
-        <img id="brcr" src="https://images.pexels.com/photos/16664618/pexels-photo-16664618/free-photo-of-pond-among-trees-in-park.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" width="50px">
+        <img id="brcr" src="https://i.pinimg.com/236x/be/06/6d/be066d7cf3d4c686e409dfd334de434f.jpg" width="50px">
         <div id = "head">
             <ul>
-                <li><a class="link" href="new1.html">HOME</a></li>
+                <li><a class="link" href="index.html">HOME</a></li>
                 <li><a class="link" href="new2.html">ROUTINES</a></li>
                 <li><a class="link" href="new3.html">SKINCARE</a></li>
                 <li><a class="link" href="new4.html">MAKEUP</a></li>
