--- a/new3.html
+++ b/new3.html
@@ -12,7 +12,7 @@
         <img id="brcr" src="https://i.pinimg.com/236x/be/06/6d/be066d7cf3d4c686e409dfd334de434f.jpg" width="50px">
         <div id = "head">
             <ul>
-                <li><a class="link" href="new1.html">HOME</a></li>
+                <li><a class="link" href="index.html">HOME</a></li>
                 <li><a class="link" href="new2.html">ROUTINES</a></li>
                 <li><a class="link" href="new3.html">SKINCARE</a></li>
                 <li><a class="link" href="new4.html">MAKEUP</a></li>
@@ -26,9 +26,9 @@
     <section id="pp">
         <h5 id="tt">Go to your skin type section and explore all the products based on your skin - available on nykaa</h5>
 <div id="circle">
-    <a href="https://i.pinimg.com/236x/47/50/42/4750421ecdf57f6233c9241bb2e2133d.jpg"></a>
-    <a href="https://i.pinimg.com/236x/5f/e7/28/5fe728a18730bfa55db6c398fef58f32.jpg"></a>
-    <a href="https://i.pinimg.com/236x/ac/81/fe/ac81fe2d640f598e7e84392f72d999d1.jpg"></a>
+    <a href="https://www.nykaa.com/skin-type-collection/best-skin-care-for-dry-skin-online-sale/c/6190"><img id="cir1" src="https://i.pinimg.com/236x/47/50/42/4750421ecdf57f6233c9241bb2e2133d.jpg"></a>
+    <a href="https://www.nykaa.com/natural/types-of-skin/oily-skin/c/9636"><img id="cir2" src="https://i.pinimg.com/236x/5f/e7/28/5fe728a18730bfa55db6c398fef58f32.jpg"></a>
+    <a href="https://www.nykaa.com/skin-type-collection/best-skin-care-for-sensitive-skin-online-sale/c/6205"><img id="cir3" src="https://i.pinimg.com/236x/ac/81/fe/ac81fe2d640f598e7e84392f72d999d1.jpg"></a>
 </div>
 
 
