--- a/new4.html
+++ b/new4.html
@@ -9,9 +9,9 @@
 <body>
     <section class="heade">
 
-        <img id="brcr" src="https://i.pinimg.com/236x/be/06/6d/be066d7cf3d4c686e409dfd334de434f.jpg" width="50px">
+        <img id="brcr" src="https://i.pinimg.com/236x/2d/67/fb/2d67fb4dedd3fd7116d42b2ed2abc0fd.jpg" width="30px">
         <div id = "head">
-            <ul><li><a class="link" href="new1.html">HOME</a></li>
+            <ul><li><a class="link" href="index.html">HOME</a></li>
                 <li><a class="link" href="new1.html">HOME</a></li>
                 <li><a class="link" href="new2.html">ROUTINES</a></li>
                 <li><a class="link" href="new3.html">SKINCARE</a></li>
