--- a/new2.html
+++ b/new2.html
@@ -15,10 +15,10 @@
   
     <section class="heade">
 
-        <img id="brcr" src="https://i.pinimg.com/236x/be/06/6d/be066d7cf3d4c686e409dfd334de434f.jpg" width="50px">
+        <img id="brcr" src="https://i.pinimg.com/236x/2d/67/fb/2d67fb4dedd3fd7116d42b2ed2abc0fd.jpg" width="30px">
         <div id = "head">
             <ul>
-                <li><a class="link" href="new1.html">HOME</a></li>
+                <li><a class="link" href="index.html">HOME</a></li>
                 <li><a class="link" href="new2.html">ROUTINES</a></li>
                 <li><a class="link" href="new3.html">SKINCARE</a></li>
                 <li><a class="link" href="new4.html">MAKEUP</a></li>
@@ -31,11 +31,11 @@
     </section>
 
 <div id="ton">
-        <img class="skin" src="https://images.pexels.com/photos/15108319/pexels-photo-15108319/free-photo-of-young-smiling-woman-with-facial-cleanser-applied-to-her-face-holding-a-bottle.jpeg?auto=compress&cs=tinysrgb&w=200">
-        <img class="skin" src="https://images.pexels.com/photos/8990460/pexels-photo-8990460.jpeg?auto=compress&cs=tinysrgb&w=200">
-        <img class="skin" src="https://images.pexels.com/photos/4612159/pexels-photo-4612159.jpeg?auto=compress&cs=tinysrgb&w=200">
-        <img class="skin" src="https://images.pexels.com/photos/3762875/pexels-photo-3762875.jpeg?auto=compress&cs=tinysrgb&w=200">
-        <img class="skin" src="https://images.pexels.com/photos/3618664/pexels-photo-3618664.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=200">
+        <img class="skin" src="https://i.pinimg.com/236x/fb/d5/dc/fbd5dcad6170c960981d3dd83d82a9f6.jpg" width = "300px">
+        <img class="skin" src="https://images.pexels.com/photos/8990460/pexels-photo-8990460.jpeg?auto=compress&cs=tinysrgb&w=200" width = "300px">
+        <img class="skin" src="https://images.pexels.com/photos/4612159/pexels-photo-4612159.jpeg?auto=compress&cs=tinysrgb&w=200" width = "300px">
+        <img class="skin" src="https://images.pexels.com/photos/3762875/pexels-photo-3762875.jpeg?auto=compress&cs=tinysrgb&w=200" width = "300px">
+        <img class="skin" src="https://images.pexels.com/photos/3618664/pexels-photo-3618664.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=200" width = "300px">
     </div>
 
     <pre id="rot1">Step 1: Cleanser
