--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <section class="heade">
 
-        <img id="brcr" src="https://i.pinimg.com/236x/be/06/6d/be066d7cf3d4c686e409dfd334de434f.jpg" width="50px">
+        <img id="brcr" src="https://i.pinimg.com/236x/2d/67/fb/2d67fb4dedd3fd7116d42b2ed2abc0fd.jpg" width="30px">
         <div id = "head">
             <ul>
                 <li><a class="link" href="index.html">HOME</a></li>
@@ -68,7 +68,7 @@
     </section>
 
     <section class="sec1">
-        <img class="neon3" src="c:\Users\HP\Downloads\pexels-ron-lach-8140913.jpg">
+        <img class="neon3" src="https://images.pexels.com/photos/763546/pexels-photo-763546.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1">
             <pre>   
             “-Our goal to provide you with
               best and reviewed skincare , 
