--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     
     <section>
-        <img class="neon" src="https://images.pexels.com/photos/3373728/pexels-photo-3373728.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt = "myimg">
+        <img class="neon" src="https://images.pexels.com/photos/3851790/pexels-photo-3851790.jpeg?auto=compress&cs=tinysrgb&w=400" alt = "myimg">
 
     </section>
 
