--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     
     <section>
-        <img class="neon" src="https://images.pexels.com/photos/3851790/pexels-photo-3851790.jpeg?auto=compress&cs=tinysrgb&w=400" alt = "myimg">
+        <img class="neon" src="https://i.pinimg.com/236x/f5/42/d2/f542d20271bf6590b5614985d3f469ef.jpg" alt = "myimg">
 
     </section>
 
