--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     
     <section>
-         <video autoplay loop muted src="https://videos.pexels.com/video-files/4763619/4763619-sd_640_360_25fps.mp4"></video>
+       <img id="brcr" src="https://cdn.pixabay.com/photo/2018/02/09/15/17/rose-3141794_640.jpg" width="30px">
 
     </section>
 
