--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
     <h2>BERRYCARE</h2>
 
     
-    <section>
-       <img id="brcr" src="https://cdn.pixabay.com/photo/2018/02/09/15/17/rose-3141794_640.jpg" width="30px">
+ <section>
+        <img class="neon" src="https://cdn.pixabay.com/video/2022/12/03/141539-777869620_large.mp4">
 
     </section>
 
@@ -43,7 +43,7 @@
         type and help you to achieve your dream skin.
     </pre>
 
-    <video autoplay loop muted src="https://videos.pexels.com/video-files/3741677/3741677-sd_640_360_25fps.mp4"></video>
+    <video autoplay loop muted src="c:\Users\HP\Downloads\6810587-uhd_4096_1974_30fps.mp4"></video>
     <h3 id="vid">HEALTHY SKIN BEAUTIFUL YOU '_'</h3>
     
     <button onclick="document.location = 'jn.html'" id="wty">EXPLORE</button>
