--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <section class="heade">
 
-        <img id="brcr" src="c:\Users\HP\Downloads\Untitled design (82).png" width="50px">
+        <img id="brcr" src="https://i.pinimg.com/236x/2d/67/fb/2d67fb4dedd3fd7116d42b2ed2abc0fd.jpg" width="50px">
         <div id = "head">
             <ul>
                 <li><a class="link" href="new1.html">HOME</a></li>
