--- a/new2.html
+++ b/new2.html
@@ -31,7 +31,7 @@
     </section>
 
 <div id="ton">
-        <img class="skin" src="https://i.pinimg.com/236x/fb/d5/dc/fbd5dcad6170c960981d3dd83d82a9f6.jpg" width = "100px">
+        <img class="skin" src="https://i.pinimg.com/236x/fb/d5/dc/fbd5dcad6170c960981d3dd83d82a9f6.jpg">
         <img class="skin" src="https://images.pexels.com/photos/8990460/pexels-photo-8990460.jpeg?auto=compress&cs=tinysrgb&w=200" >
         <img class="skin" src="https://images.pexels.com/photos/4612159/pexels-photo-4612159.jpeg?auto=compress&cs=tinysrgb&w=200" >
         <img class="skin" src="https://images.pexels.com/photos/3762875/pexels-photo-3762875.jpeg?auto=compress&cs=tinysrgb&w=200" >
