--- a/jn.html
+++ b/jn.html
@@ -15,7 +15,7 @@
         <img id="brcr" src="https://i.pinimg.com/236x/2d/67/fb/2d67fb4dedd3fd7116d42b2ed2abc0fd.jpg" width="30px">
         <div id = "head">
             <ul>
-				<li><a class="link" href="new1.html">HOME</a></li>
+		<li><a class="link" href="index.html">HOME</a></li>
                 <li><a class="link" href="new2.html">ROUTINES</a></li>
                 <li><a class="link" href="new3.html">SKINCARE</a></li>
                 <li><a class="link" href="new4.html">MAKEUP</a></li>
